--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,17 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'com.google.code.gson:gson:2.11.0'
 
 	// lombok
 	compileOnly 'org.projectlombok:lombok:1.18.28'
 	annotationProcessor 'org.projectlombok:lombok:1.18.28'
+
+	// Feign client
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
+	implementation 'io.github.openfeign:feign-gson:11.10'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
