add account config bean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=roblox-api.notifier
+
+discord.api.avatar = https://static.wikia.nocookie.net/roblox/images/3/3b/NOOB%21.png
+discord.api.username = Roblox Presence Bot
